# marskin-rhym--ongelma

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: orchestrator.yaml
inputs/example_class/: all_students.txt  banned_combinations.txt
src/marski-group-solver/: input_parser.py  main.py
src/marski_group_solver/: input_parser.py  main.py  my_class.py
tests/: conftest.py  test_class_object.py  test_input_parser.py  test_inputs.py  test_solver.py
